syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.semarslan.models";

message BalanceCheckRequest {
  int32 accountNum = 1;

}

message Balance {
  int32 amount = 1;
}

service BankService {
  rpc getBalance(BalanceCheckRequest) returns (Balance) ;
}